--- a/patch 1.1/css/faculty.css
+++ b/patch 1.1/css/faculty.css
@@ -306,6 +306,7 @@ nav a
 .post 
 {
     display: flex;
+    gap: 5px;
 }
 .post #stream-announcement
 {
@@ -318,7 +319,9 @@ nav a
 {
     background: transparent;
     border: transparent;
-    color: rgb(255, 255, 255);
+    color: #000000;
+    font-weight: 500;
+    cursor: pointer;
 }
 .class-meta .record:hover, .folder:hover, .settings:hover
 {
@@ -699,4 +702,66 @@ section
     color: green;
     padding: 10px 15px;
     font-weight: 500;
+}
+#create-task-form {
+    background-color: var(--background-color);
+    border: 1px solid var(--border-color);
+    border-radius: 10px;
+    box-shadow: 0 2px 5px var(--shadow-color);
+    padding: 20px 40px 20px 20px;
+    width: 400px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+#create-task-form label {
+    font-size: 16px;
+    color: var(--primary-color);
+    padding-bottom: 20px;
+}
+
+#create-task-form input[type="text"],
+#create-task-form input[type="date"],
+#create-task-form input[type="time"],
+#create-task-form select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    font-size: 16px;
+    color: var(--primary-color);
+}
+
+#create-task-form input[type="submit"] {
+    background-color: var(--primary-color);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+#create-task-form input[type="submit"]:hover {
+    background-color: var(--secondary-color);
+}
+
+#create-task-form button{
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 250px;
+}
+#task-list
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
